--- a/alpha/flaskr/templates/auth/login.html
+++ b/alpha/flaskr/templates/auth/login.html
@@ -9,6 +9,18 @@
     <title>Login | E-spirit</title>
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div class="flash-messages">
+        {% for category, message in messages %}
+            <div class="flash-message {{ category }}">
+            {{ message }}
+            </div>
+        {% endfor %}
+        </div>
+        {% endif %}
+    {% endwith %}
+
     <div class="background">
         <div class="shape"></div>
         <div class="shape"></div>
