--- a/alpha/flaskr/templates/chat.html
+++ b/alpha/flaskr/templates/chat.html
@@ -23,8 +23,17 @@
             <img src="../static/img/coin_E-esprit.png" alt="coin_E-esprit" class="ta-pp">
         </button>
     </header>
-
-
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div class="flash-messages">
+        {% for category, message in messages %}
+            <div class="flash-message {{ category }}">
+            {{ message }}
+            </div>
+        {% endfor %}
+        </div>
+        {% endif %}
+    {% endwith %}
 
     <dialog id="my-dialog">
         <div class="dialog-header">
